[tool.poetry]
name = "flipper"
version = "0.1.1"
description = ""
authors = ["Lucas Oliveira <olivmath@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
eth-ape = "0.3.*"

[tool.poetry.dev-dependencies]
pytest = "7.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
